# video-learn

./: .env.example  .gitignore  README.md
backend/: config.py  config.yaml.example  main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  schemas.py
backend/routers/: __init__.py  export.py  video.py  websocket.py
backend/services/: __init__.py  asr_service.py  audio_extractor.py  history_service.py  intermediate_service.py  lecture_generator.py  section_splitter.py  subtitle_generator.py  text_corrector.py  vad_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: DuplicateDialog.tsx  ExportButton.tsx  FileUpload.tsx  HistoryList.tsx  HotWordsInput.tsx  LecturePanel.tsx  ProgressBar.tsx  StageSelector.css  StageSelector.tsx  SubtitlePanel.tsx  VideoPlayer.tsx
frontend/src/hooks/: useVideoSync.ts  useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
